--- a/style.css
+++ b/style.css
@@ -87,26 +87,35 @@ i.fab{
 }
 .content-skills .title{
   font-family: sans-bold;
-  margin-top: -60px;
+  margin-bottom: -10px;
   font-size: 50px;
-  padding-bottom: 20px;
 }
 #project {
   display: block;
   width: 100%;
   height:200%;
 }
+.content-skills .row{
+  position:absolute;
+  bottom: 3%;
+  width: 97%;
+    margin-left:-20px;
+}
+*::selection{
+  background-color: black;
+}
 .content-skills {
-  padding-top: 25%;
+  /*border: 1px solid black;*/
+  padding-bottom: 3%;
   font-family: sans-bold;
-  font-size: 30px;
+  font-size: 25px;
   z-index: -1;
   padding-right: 3%;
   padding-left : 3%;
   position: absolute;
   display: block;
   width: 100%;
-  height:100%;
+  height:113%;
   right:0;
   top:65%;
   background: url(assets/bg-skills.svg);
