--- a/style.css
+++ b/style.css
@@ -200,6 +200,9 @@ footer{
 
 }
 @media (max-width: 768px) {
+  .carousel-item .card{
+    height: 400px;
+  }
 
   .image-bg {
     border:1px solid #414141;
@@ -215,6 +218,7 @@ footer{
     background-size: 130% 130%;
   }
   .hire a{
+    margin-top: 150px;
     color: white;
     border-color: white;
     width: 100px;
@@ -235,6 +239,7 @@ footer{
     background-size: 100% 100%;
   }
   .name{
+    margin-top: 40px;
     top: 0;
     position: relative !important;
     font-size: 50px;
@@ -253,14 +258,14 @@ footer{
   }
  
   .navbar button{
-    font-size: 50px;
+    margin-top: 10px;
+    font-size: 20px;
     color:  #EA8953 !important;
   }
   .navbar {
     z-index: 10;
     top: 0;
     right: 0;
-    margin-top: 20px;
     position: fixed;
     
   }
