--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body, html {
   z-index: 2;
 }
 .contact-me ol li{
-  /*border:1px solid #414141;*/
+  border:1px solid #414141;
   padding-top: 10px;
   text-align: center;
   height: 55px;
@@ -246,7 +246,7 @@ footer{
     font-size: 20px;
   }
   .contact-me ol li{
-    /*border:1px solid black;*/
+    border:1px solid black;
     font-size: 12px;
     padding-top: 9px;
     height: 45px;
@@ -291,7 +291,7 @@ footer{
   width: 100%;
   height:100%;
   right:0;
-  top:65%;
+  top:75%;
   background: url(assets/bg-mobile-skill.svg);
   background-size: 100% 120%;
   }
@@ -303,5 +303,8 @@ footer{
     font-size: .75rem;
     background-color: #e9ecef;
     border-radius: .25rem;
+  }
+  #project{
+    top: 175%;
   }
 }
