--- a/style.css
+++ b/style.css
@@ -200,7 +200,10 @@ footer{
   .carousel-item .card{
     height: 400px;
   }
-
+div.content-home{
+  padding: 3%;
+  height: 110%;
+}
   .image-bg {
     /*border:1px solid #414141;*/
     z-index: -1;
